Fix z-index for tables

--- a/frontend/src/assets/scss/table.scss
+++ b/frontend/src/assets/scss/table.scss
@@ -1,6 +1,7 @@
 .el-table {
   width: 100%;
   border: none;
+  z-index: 0;
 }
 
 .el-table .table-actions {
